@@ -7,7 +7,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: unixWm.test,v 1.23 2002/07/13 21:52:34 dgp Exp $
+# RCS: @(#) $Id: unixWm.test,v 1.24 2002/07/15 16:56:32 dgp Exp $
 
 package require tcltest 2.1
 namespace import -force tcltest::configure
@@ -789,7 +789,7 @@ test unixWm-21.5 {Tk_WmCmd procedure, "group" option, create leader wrapper} {un
     set result
 } {{} 0}
 
-test unixWm-22.1 {Tk_WmCmd procedure, "iconbitmap" option} {
+test unixWm-22.1 {Tk_WmCmd procedure, "iconbitmap" option} unix {
     list [catch {wm iconbitmap .t 12 13} msg] $msg
 } {1 {wrong # arguments: must be "wm iconbitmap window ?bitmap?"}}
 test unixWm-22.2 {Tk_WmCmd procedure, "iconbitmap" option} {unix testwrapper} {
@@ -1163,7 +1163,7 @@ test unixWm-34.3 {Tk_WmCmd procedure, "sizefrom" option} {
     list [catch {wm sizefrom .t none} msg]  $msg
 } {1 {bad argument "none": must be program or user}}
 
-test unixWm-35.1 {Tk_WmCmd procedure, "state" option} {
+test unixWm-35.1 {Tk_WmCmd procedure, "state" option} unix {
     list [catch {wm state .t 1} msg]  $msg
 } {1 {bad argument "1": must be normal, iconic or withdrawn}}
 test unixWm-35.2 {Tk_WmCmd procedure, "state" option} {
@@ -2387,12 +2387,12 @@ test unixWm-59.3 {exit processing} {
     list $error $msg
 } {0 {}}
 
-test unixWm-60.1 {wm attributes} {
+test unixWm-60.1 {wm attributes} unix {
     destroy .t
     toplevel .t
     wm attributes .t
 } {}
-test unixWm-60.2 {wm attributes} {
+test unixWm-60.2 {wm attributes} unix {
     destroy .t
     toplevel .t
     list [catch {wm attributes .t -foo} msg] $msg
